# ITKPythonPackage

./: .gitignore  .pre-commit-config.yaml  .pypirc.example  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  itkVersion.py  pixi.toml  pyproject.toml
.github/: pull_request_template.md
BuildWheelsSupport/: WHEEL_NAMES.txt
cibuildwheel/: fetch-itk.sh  test-fetch-itk.sh
cmake/: ITKPythonPackage_SuperBuild.cmake
conda-forge/: README.md
docs/: Build_ITK_Module_Python_packages.rst  Build_ITK_Python_packages.rst  Miscellaneous.rst  Prerequisites.rst  conf.py  index.rst  requirements-docs.txt
experiments/wheel-variants/pilot/: CMakeLists.txt  build_pilot.sh  inspect_wheel.py  pyproject.toml
experiments/wheel-variants/pilot/src/itk_variant_demo/: __init__.py  _demo.cpp
scripts/: BuildManager.py  build-all-latest-wheels.sh  build_all_latest_wheels.py  build_python_instance_base.py  build_wheels.py  cmake_argument_builder.py  conda_itk_stubs.py  dockcross-manylinux-build-module-wheels.sh  dockcross-manylinux-build-wheels.sh  dockcross-manylinux-download-cache-and-build-module-wheels.sh  dockcross-manylinux-download-cache.sh  dockcross-manylinux-set-vars.sh  docker_build_environment_driver.sh  install_pixi.py  linux_build_python_instance.py  macos_build_python_instance.py  macpython-build-common.sh  macpython-build-module-wheels.sh  macpython-build-wheels.sh  macpython-delocate-wheels.sh  macpython-download-cache-and-build-module-wheels.sh  macpython-install-python.sh  make_tarballs.sh  make_windows_zip.ps1  publish_tarball_cache.py  pyproject.toml.in  (+6 more)
(+29 files in other folders)
